--- a/package.json
+++ b/package.json
@@ -141,6 +141,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "fast-json-stringify": "^6.1.1",
+    "fast-querystring": "^1.1.2",
     "mysql2": "^3.15.3",
     "zod": "^3.22.4"
   },
