--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.10",
     "fast-json-stringify": "^6.1.1",
     "fast-querystring": "^1.1.2",
     "mysql2": "^3.15.3",
